# aruco_localizer

./: CMakeLists.txt  License.txt  README.md  package.xml
config/: static_markers.yaml
include/: Localizer.h  Object.h  Transformation.h
launch/: MarkersBroadcast.launch
lib/: Localizer.cpp  Transformation.cpp
src/: ObjectBroadcast.cpp
