<?xml version="1.0"?>
<package format="2">
  <name>aruco_localizer</name>
  <version>0.0.0</version>
  <description>The aruco_localizer package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lengagne@gmail.com">Sébastien Lengagneg</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>postcardware</license>

    <buildtool_depend>aruco</buildtool_depend>
    <buildtool_depend>aruco_msgs</buildtool_depend>
    
    <depend>aruco</depend>
    <depend>aruco_msgs</depend>
    <depend>tf</depend>
    
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>    
  
    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>yaml-cpp</build_depend>
    <build_export_depend>yaml-cpp</build_export_depend>
    <exec_depend>yaml-cpp</exec_depend>    

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
